--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@tanstack/react-table": "^8.21.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.6.3",
-    "react-select": "^5.10.2"
+    "react-router": "^7.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
